//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Round {
  id Int [pk, increment]
  link1 String
  link2 String
  categories Category [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  icon String [not null]
  roundId Int [not null]
  round Round [not null]
  steps Step [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Step {
  id Int [pk, increment]
  title String [not null]
  description String
  icon String [not null]
  type StepType [not null]
  categoryId Int [not null]
  category Category [not null]
  infographics Infographic [not null]
  items Item [not null]
  cards Card [not null]
  smartListFilter SmartListFilter
  smartListFilterId Int
  keywords Keyword [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (title, categoryId) [unique]
  }
}

Table Infographic {
  id Int [pk, increment]
  markdown String [not null]
  image String [not null]
  stepId Int [not null]
  step Step [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Item {
  id Int [pk, increment]
  markdown String [not null]
  stepId Int [not null]
  step Step [not null]
  attributeId Int
  attribute Attribute
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Card {
  id Int [pk, increment]
  title String [not null]
  markdown String [not null]
  strength CardStrength [not null]
  stepId Int [not null]
  step Step [not null]
  attributeId Int
  attribute Attribute
  keywords Keyword [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Keyword {
  id Int [pk, increment]
  value String [not null]
  cards Card [not null]
  Step Step [not null]
  stepId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (value, stepId) [unique]
  }
}

Table Attribute {
  id Int [pk, increment]
  value String [not null]
  description String [not null]
  color Color [not null, default: 'LIGHTBLUE']
  items Item [not null]
  cards Card [not null]
  smartListFilter SmartListFilter [not null]
  smartListFilterId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table SmartListFilter {
  id Int [pk, increment]
  title String [not null]
  attributes Attribute [not null]
  steps Step [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table UserWhitelist {
  email String [pk]
  whiteListed Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CardToKeyword {
  keywordsId Int [ref: > Keyword.id]
  cardsId Int [ref: > Card.id]
}

Enum StepType {
  INFOGRAPHIC
  SMARTLIST
  CARDGRID
}

Enum CardStrength {
  LOW
  MEDIUM
  HIGH
}

Enum Color {
  RED
  PINK
  PURPLE
  YELLOW
  TAN
  ORANGE
  GREEN
  LIGHTBLUE
  BLUE
  DARKBLUE
}

Ref: Category.roundId > Round.id

Ref: Step.categoryId > Category.id

Ref: Step.smartListFilterId > SmartListFilter.id

Ref: Infographic.stepId > Step.id

Ref: Item.stepId > Step.id

Ref: Item.attributeId > Attribute.id

Ref: Card.stepId > Step.id

Ref: Card.attributeId > Attribute.id

Ref: Keyword.stepId > Step.id

Ref: Attribute.smartListFilterId > SmartListFilter.id